[package]
name = "mmtls-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
mmtls = { path = "../mmtls" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
hex = "0.4"
serde_json = "1"
base64 = "0.22"
httparse = "1"
flate2 = "1"
syntect = { version = "5", default-features = false, features = [
    "default-syntaxes",
    "regex-fancy",
    "default-themes",
] }
