[package]
name = "mmtls"
version = "0.1.0"
edition = "2024"

[dependencies]
p256 = { version = "0.14.0-rc.11", features = ["ecdh"] }
sha2 = "0.11.0"
hkdf = "0.13.0"
aes-gcm = "0.11.0-rc.4"
hmac = "0.13.0"
rand = "0.10.1"
hex = "0.4.3"
hex-literal = "1.1.0"
thiserror = "2.0.18"
log = "0.4.32"
httparse = "1.9"
tokio = { version = "1", features = [
    "net",
    "io-util",
    "fs",
    "sync",
    "macros",
    "rt",
] }
flate2 = "1.0"
